--- a/config/database.yml
+++ b/config/database.yml
@@ -5,8 +5,7 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: postgresql
-  encoding: unicode
+  adapter: sqlite3
   pool: 5
   timeout: 5000
 
@@ -22,4 +21,7 @@ test:
   database: db/test.sqlite3
 
 production:
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
   url: <%= ENV["DATABASE_URL"] %>
